color activated menu

--- a/src/ui/components/CustomerTypeSelector.css
+++ b/src/ui/components/CustomerTypeSelector.css
@@ -3,11 +3,11 @@
     width: 62px !important;
 }
 
-button > div > div {
+.customerTypeSelector button > div > div {
     height: inherit !important;
 }
 
-button{
+.customerTypeSelector button{
     height: inherit !important;
     padding: 10px !important;
 }
