--- a/src/ui/containers/Home/ProducerSideBar.css
+++ b/src/ui/containers/Home/ProducerSideBar.css
@@ -42,6 +42,7 @@ span.tag {
 
     border-radius: 4px;
     width: 100%;
+    cursor: pointer;
 }
 
 .progress-button[data-style="fill"][data-horizontal] {
